# Chuckie-Egg-Remake-

./: .gitignore  CMakeLists.txt  Code repository.txt  LICENSE  README.adoc  README.md  auto.bat  auto.sh  conanfile.txt
assets/: Chuckie Egg Start Screen.psd
src/: main.cpp
